## learning_paradigm.py
from tensorflow.keras import layers

class LearningParadigm:
    def __init__(self, paradigm: str = 'deep_learning'):
        self.paradigm = paradigm

    def switch_paradigm(self, new_paradigm: str):
        self.paradigm = new_paradigm

    def get_paradigm(self):
        return self.paradigm

    def apply_paradigm(self, model):
        if self.paradigm == 'deep_learning':
            model.add(layers.Dense(10, activation='relu'))
        elif self.paradigm == 'reinforcement_learning':
            # Placeholder for reinforcement learning implementation
            pass
        elif self.paradigm == 'transfer_learning':
            # Placeholder for transfer learning implementation
            pass
        elif self.paradigm == 'self_supervised_learning':
            # Placeholder for self-supervised learning implementation
            pass
        elif self.paradigm == 'self_attention_mechanisms':
            # Placeholder for self-attention mechanisms implementation
            pass
        elif self.paradigm == 'self_reflection':
            # Placeholder for self-reflection implementation
            pass
        elif self.paradigm == 'ensemble_learning':
            # Placeholder for ensemble learning implementation
            pass
        elif self.paradigm == 'unsupervised_learning':
            # Placeholder for unsupervised learning implementation
            pass
        elif self.paradigm == 'meta_learning':
            # Placeholder for meta-learning implementation
            pass
        else:
            raise ValueError(f"Unknown learning paradigm: {self.paradigm}")
